# facalculo

./: Cargo.toml  clippy.toml
examples/: advanced-circuit.json  advanced-oil-processing.json  automation-science-pack.json  chemical-science-pack.json  coal.json  copper-ore.json  copper-plate.json  crude-oil.json  electronic-circuit.json  iron-ore.json  iron-plate.json  logistic-science-pack.json  low-density-structure.json  military-science-pack.json  plastic-bar.json  processing-unit.json  production-science-pack.json  rocket-fuel.json  rocket-silo.json  science.json  steel-plate.json  stone.json  sulfur.json  sulfuric-acid.json  utility-science-pack.json  water.json
examples/base/: coal.json  copper-ore.json  copper-plate.json  electronic-circuit.json  iron-ore.json  iron-plate.json  military-science-pack.json  processing-unit.json  stone.json  utility-science-pack.json  water.json
examples/foundry/: advanced-circuit.json  advanced-oil-processing.json  chemical-science-pack.json  copper-ore.json  iron-ore.json  logistic-science-pack.json  low-density-structure.json  military-science-pack.json  molten-copper.json  molten-iron.json  processing-unit.json  production-science-pack.json  stone.json  sulfuric-acid.json  utility-science-pack.json
examples/rocket/: rocket-fuel.json
examples/space-science-pack/: space-science-pack.json
examples/vulcanus/: calcite.json  coal-liquefaction.json  coal.json  lava.json  molten-copper.json  molten-iron.json  steam.json  sulfuric-acid.json  water.json
src/: compute.rs  data.rs  graph.rs  lib.rs  main.rs  module.rs  module_graph.rs
