[package]
name = "facalculo"
version = "0.1.0"
edition = "2021"
default-run = "facalculo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive", "unstable-v5"] }
graphviz-rust = "0.9.3"
petgraph = { version = "0.6.5", features = ["serde-1"] }
rust_decimal = "1.36.0"
serde = "1.0.214"
serde_derive = "1.0.214"
serde_json = "1.0.132"
