[package]
name = "facalculo"
version = "0.1.0"
edition = "2024"
default-run = "facalculo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive", "unstable-v5"] }
graphviz-rust = "0.9.3"
nalgebra = "0.33.2"
petgraph = { version = "0.6.5", features = ["serde-1"] }
rust_decimal = "1.36.0"
serde = "1.0.214"
serde_derive = "1.0.214"
serde_json = "1.0.132"

[lints.clippy]
absolute_paths = "warn"
arbitrary_source_item_ordering = "warn"
assigning_clones = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
deref_by_slicing = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
implicit_clone = "warn"
match_same_arms = "warn"
needless_pass_by_value = "warn"
partial_pub_fields = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
# https://github.com/rust-lang/rust-clippy/issues/15143
# std_instead_of_core = "warn"
str_to_string = "warn"
string_to_string = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
